// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledFieldComponent In Error with Children 1`] = `
<fieldset
  className="form-group has-error"
>
  <label
    className="control-label"
    htmlFor="ID"
  >
    Our Label
  </label>
  <StandardFieldComponent
    error="errorMessage"
    inError={true}
  >
    <hr />
  </StandardFieldComponent>
</fieldset>
`;

exports[`LabeledFieldComponent add extra classNames 1`] = `
<fieldset
  className="a_class another_class form-group"
>
  <label
    className="control-label"
    htmlFor="ID"
  >
    Our Label
  </label>
  <StandardFieldComponent
    inError={false}
  >
    <hr />
  </StandardFieldComponent>
</fieldset>
`;

exports[`LabeledFieldComponent has error checked but no message so not really in error 1`] = `
<fieldset
  className="form-group"
>
  <label
    className="control-label"
    htmlFor="ID"
  >
    Our Label
  </label>
  <StandardFieldComponent
    error={null}
    inError={false}
  >
    <hr />
  </StandardFieldComponent>
</fieldset>
`;

exports[`LabeledFieldComponent no error 1`] = `
<fieldset
  className="form-group"
>
  <label
    className="control-label"
    htmlFor="ID"
  >
    Our Label
  </label>
  <StandardFieldComponent
    inError={false}
  >
    <hr />
  </StandardFieldComponent>
</fieldset>
`;
